# loggingx

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  logging.ini  pyproject.toml
.github/workflows/: tests.yml
logenrich/: __init__.py
loggingx/: __init__.py
tests/: __init__.py  test___init__.py
