[project]
name = "logenrich"
version = "1.0.1"
description = "A Python library that augments the standard logging module"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ronaldo Webb",email = "ron@ronella.xyz"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
